<resources>
    <string name="app_name">Calculator</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eith">8</string>
    <string name="number_nine">9</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="cancel">C</string>
    <string name="backspace">B</string>
    <string name="description">Back Button</string>
    <string name="error">error!</string>
    <string name="m_clear">MC</string>
    <string name="m_plus">M+</string>
    <string name="m_minus">M-</string>
    <string name="m_recall">MR</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="fraction">1/x</string>
    <string name="power_two">x²</string>
    <string name="power_three">x³</string>
    <string name="power_input">xʸ</string>
    <string name="strong">x!</string>
    <string name="sqrt2">√</string>
    <string name="sqrt3">∛</string>
    <string name="pi">pi</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="log">log</string>
    <string name="exp">exp</string>
    <string name="mod">mod</string>
    <string name="e">e</string>
</resources>
